Finished reread of section 2

--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -113,7 +113,7 @@ The stochastic nature of the project also comes with various challenges. Naively
 %TODO: For the cites, look at sources and where they got it from; citing directly leads me to more (varied) sources
 
 \subsection{This research project} \label{ss:objs}
-The primary goal of this project is to look at the entire life-cycle of OWFs, and how decisions at different points in this life-cycle impact the situation at different points in time. Specifically I aim to use both optimisation and simulation to provide insight into logistical decisions, primarily scheduling, but potentially also layout of the site and the routing on it. The latter two are very challenging subjects on their own, and I will likely only run simplistic experiments with them, to see whether looking at a full life-cycle gives any insights on its own. Therefore the primary focus will lie on scheduling, specifically scheduling that considers the entire life-cycle. 
+The primary goal of this project is to look at the entire life-cycle of OWFs, and how decisions at different points in this life-cycle impact the situation at other points in time. Specifically I aim to use both optimisation and simulation to provide insight into logistical decisions, primarily scheduling, but potentially also layout of the site and the routing on it. The latter two are very challenging subjects on their own, and I will likely only run simplistic experiments with them, to see whether looking at a full life-cycle gives any insights on its own. Therefore the primary focus will lie on scheduling, specifically scheduling that considers the entire life-cycle. 
 
 Over the past year, I have spent most of my time reading up on the subject, both the methods and the challenges of offshore projects. This literature is summed up in \Cref{s:lit}. Additionally I have been laying the groundwork for a simulator which I am planning to turn into a tool for support on the logistical decisions described previously. Details on this tool are given in \Cref{s:sim}.
 
@@ -126,29 +126,30 @@ Can considering the entirety of the life-cycle of an Offshore Wind Farm, and how
 \label{rquest}
 \end{restatable}
 
-The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated separately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommissioning projects are less well researched. Treating these phases as separate makes them more manageable, but some insight about how they influence each other is also valuable. There are two primary ways in which these phases interact; some partially take place at the same time and share resources, and any phase affect any phase after it. 
+The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated separately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommissioning projects are less well researched. However no research was found considering all three phases simultaneously. Treating these phases as separate makes them more manageable, but some insight about how they influence each other is also valuable. There are two primary ways in which these phases interact; some partially take place at the same time and share resources, and any phase affect any phase after it. 
 
-For the first type of interaction it is important to consider that the maintenance phase overlaps with both other phases for some amount of time. Once the first set of wind turbines has been fully installed they start producing energy and might require maintenance. It may be beneficial to use the same vessels to install the remaining wind turbines and perform maintenance, or have separate vessels that still use the same ports and have to consider the routing of the installation vessels. The same thing happens at the end of the life cycle; when decommission starts specific wind turbines are decommissioned while others continue to produce energy. 
+For the first type of interaction it is important to consider that the maintenance phase overlaps with both other phases for some amount of time. Once the first set of wind turbines has been fully installed they start producing energy and might require maintenance, while the rest of the turbines are still being installed. It may be beneficial to use the same vessels to install the remaining wind turbines and perform maintenance, or have separate vessels that still use the same ports and have to consider the routing of the installation vessels. The same thing happens at the end of the life cycle; when decommission starts specific wind turbines are decommissioned while others continue to produce energy. 
 
-The second type of interaction stems from any event in the life-cycle of a wind turbine (or the entire farm) can affect any event after it, regardless of which phase these events are part of. The order in which the turbines are installed determines their age, and affects their expected failure rate when maintenance starts on them. In a more extensive way, any failures and repairs during the maintenance phase influence which wind turbines are most likely to fail again, and therefore which are most efficient to decommission first. With that in mind it is clear that decommission is the phase which relies most heavily on what happens before it, which may be one of the reasons why it has been studied less than the other two phases. This type of interaction means simulating the early stages of the life-cycle of the windfarm might lead to more accurate and realistic knowledge to base decisions in the later stages of the life-cycle on. For example, basing the order in which turbines are decommissioned on their actual history of failures and reparations is expected to lead to better result than a predetermined arbitrary order. 
+%TODO: Cite someone regarding the possible explanation for low decomisison research
+The second type of interaction has to do with any event in the life-cycle of a wind turbine (or the entire farm) affecting all events that come after it, regardless of which phase these events are part of. The order in which the turbines are installed determines their age, and affects their expected failure rate when maintenance starts on them. In a more extensive way, any failures and repairs during the maintenance phase influence which wind turbines are most likely to fail again, and therefore which are most efficient to decommission first. With that in mind it is clear that decommission is the phase which relies most heavily on what happens before it, which may be one of the reasons why it has been studied less than the other two phases. This type of interaction means simulating the early stages of the life-cycle of the windfarm might lead to more accurate and realistic knowledge to base decisions in the later stages of the life-cycle on. For example, basing the order in which turbines are decommissioned on their actual history of failures and reparations is expected to lead to better result than a predetermined arbitrary order. 
 
-This interaction works in the other direction as well. Instead of the history of the windfarm influencing decisions near the end of the life-cycle, the future of the windfarm can also influence later decisions. For example, if we compare two installation schedules and base our choice solely on a measurement done during the installation phase (such as the date the installation finishes, or the cost at time of finishing) this could potentially lead to another option than if we look at the entire life-cycle. Non-operational periods are times of the year (usually winter months) in which no installation operations are performed on the site due to the severe weather conditions. Using periods like this leads to age differences between turbines being bigger, which might potentially have significant effects on the maintenance and decommission phases. These long-term effects of decisions can only be explored when the entire life-cycle is considered, and could lead to an installation schedule which performs well in the short term performing worse when considering longer time frames. 
+This interaction works in the other direction as well. Instead of the history of the windfarm influencing decisions near the end of the life-cycle, the future of the windfarm can also influence early decisions. For example, if we compare two installation schedules and base our choice solely on a measurement done during the installation phase (such as the date the installation finishes, or the cost at time of finishing) this could potentially lead to another option than if we look at the entire life-cycle. Non-operational periods are times of the year (usually winter months) in which no installation operations are performed on the site due to the severe weather conditions. Using periods like this leads to larger age differences between turbines, which could influence the maintenance and decommission phases. This effect cannot be fully measured unless the entire life-cycle is considered, and knowing the effect could influence decisions regarding the non-operational periods. 
 
 Through these interactions we state three sub-questions for the above research question:
 
 \begin{restatable}{subquestion}{sq1}
 \label{sq1}
-Can considering how phases in the life-cycle of a windfarm overlap and share resources improve logistical decision making on these projects
+Can considering how phases in the life-cycle of a windfarm overlap and share resources improve logistical decision making on these projects?
 \end{restatable}
 
 \begin{restatable}{subquestion}{sq2}
 \label{sq2}
-Can simulating the entire life-cycle of a windfarm provide useful data to base logistical decisions on in the later phases of these projects. 
+Can simulating the entire life-cycle of a windfarm provide useful data to base logistical decisions on in the later phases of these projects?
 \end{restatable}
 
 \begin{restatable}{subquestion}{sq3}
 \label{sq3}
-Can considering the long-term effects of logistical decisions early on in the life-cycle of a windfarm improve these decisions. 
+Can considering the long-term effects of logistical decisions early on in the life-cycle of a windfarm improve these decisions? 
 \end{restatable}
 
 While the latter two questions seem similar, they approach the same phenomenon from different perspectives. This will likely lead to different techniques and models being used to answer them. 
