--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -69,7 +69,7 @@ Question: #3
 \begin{document}
 \title{Simulation and Optimisation of Offshore Renewable Energy Arrays for Minimal Life-Cycle Costs}
 \author{Robin Kuipers \\[1cm] Supervisors: \\ Kerem Akartunali \\ Euan Barlow\\[2cm] University of Strathclyde \\ Strathclyde Business School \\ {\small Glasgow, Scotland}}
-\date{November, 2019}
+\date{January, 2020}
 
 \maketitle
 
@@ -154,84 +154,36 @@ Can considering the long-term effects of logistical decisions early on in the li
 
 While the latter two questions seem similar, they approach the same phenomenon from different perspectives. This will likely lead to different techniques and models being used to answer them. 
 
-\iffalse
-
-The explicit research objective is: 
-
-\begin{restatable}{objective}{objectve}
-\label{objectve}
-Design an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on sub-models for each phase of the life-cycle.
-\end{restatable}
-
-The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated separately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommissioning projects are less well researched. Treating these phases as separate is often beneficial, but some insight about how they influence each other is also valuable. 
-
-The decision that impacts all future decisions most clearly is the layout of the site, as this affects the distance and travel times between the assets during all other operations. Therefore the tool will be able to take in different layouts and thereby experiment with them. 
-
-However, the main focus of this project is on scheduling, where the different phases also affect each other. A clear way to demonstrate this is by showing that the phases are not entirely distinct; an installation project can take several years to complete, but the first WTGs might be operational much earlier. That means the site is partly operational while other parts are still being installed. These operational parts might need maintenance before the installation is fully complete, and at the very least these early WTGs may need maintenance before the last WTG that was installed needs maintenance. Therefore the installation schedule impacts the maintenance schedule, and to my knowledge there is no other research exploring this effect. 
-A similar effect appears at the end of the life-cycle, when the decommissioning project starts. Here the connection between maintenance and decommissioning may be even stronger, as it may not be cost-effective to conduct maintenance on a WTG shortly before that WTG is decommissioned. Conversely one may want to schedule the decommissioning of a WTG that recently has had maintenance later than that of a WTG which is likely to need maintenance soon. How this exactly works out depends on the installation, maintenance and decommissioning policies, but it is clear that these decisions affect one another, and that is what I would like to research in this project. 
-
-This objective has three sub-objectives:
-
-\begin{restatable}{subobjective}{subobjone}
-\label{subobjone}
-Design an integrated optimisation and simulation model for the installation projects of an OWF. 
-\end{restatable}
-
-\begin{restatable}{subobjective}{subobjtwo}
-\label{subobjtwo}
-Design an integrated optimisation and simulation model for the maintenance projects of an OWF. 
-\end{restatable}
-
-\begin{restatable}{subobjective}{subobjthree}
-\label{subobjthree}
-Design an integrated optimisation and simulation model for the decommissioning projects of an OWF. 
-\end{restatable}
-
-As each of these three sub-objectives is already a sizeable goal in itself, these models will likely be based on models from the literature. For the installation projects, I already have a fairly clear view of how I want to structure this model, as will be explained later in this report. For maintenance, I do not yet have a particular model in mind, but it is clear there are many of these models in the literature, some of which I may be able to use as a basis. Additionally, the decommissioning model will likely be similar to the installation model, as these projects are assumed to be similar in structure. 
-
-After each of the sub-objectives is complete, the models need to be integrated into one life-cycle spanning model in order to complete the primary objective. Integrating models, especially on this scale, is often very complex. This will be the main contribution of this research project. These models will also be used for analysis as a secondary contribution, depending on time restrictions.
-
-\bigskip
-
-In addition to these research objectives, I aim to achieve some practical results during this research. I want to build a tool that can be used to help make logistical decisions, based on the above models. The tool should have multiple functions, highlighting either the optimisation or the simulation aspect of the model. For example, one could focus on the optimisation and generate some optimal schedule, given a set of parameters, or give the tool a schedule it should look for improvements on. Alternatively, the tool should be able to take in a schedule and explore statistical measures if this schedule was to be used in reality, providing insight into expected and plausible completion dates and costs of projects. 
-
-This tool is a core part of the project, as it can be used to validate the models and explore their strength. It will be used to make the research contribution of this project applicable to actual projects. Therefore I aim to acquire some realistic data (or real data if possible) on past projects on OWFs, and use them to validate the model and tool. Once this is done, the strength of the tool can be tested by exploring some scheduling policies. 
-
-\bigskip
-
-Potential likely future research topics that might be explored later in this project are:
-
-\begin{itemize}
-\item Use the tool to research the layout of the OWF sites.
-\item Use the tool to research routing policies on the site.
-\item Use the tool to research the supply chain for any projects on the site. 
-\item Experiment within the tool with imperfect weather forecasts. 
-\end{itemize}
-
-In \Cref{s:concl} I will go into more detail about these objectives, how I aim to complete them, and what the future of this project will look like.
-
-\fi
-
 \pagebreak
 
 \section{Literature} \label{s:lit}
-In this section I will give an overview of the literature I have read to-date for this research. I will discuss some actual attempts to produce a schedule for the installation problem in \Cref{sss:sched}, and some research on the maintenance of the site will be shown in \Cref{sss:maint}. Other research related to offshore projects is shown in \Cref{sss:offsh}. Some other studies to do with uncertain scheduling will be highlighted in \Cref{sss:stoch}.  Afterwards in \Cref{ss:meth} the common methods for these problems will be discussed separate from any particular research. 
+In this section I will give an overview of the literature I have read to-date for this research. I will discuss some actual attempts to produce a schedule for the installation problem in \Cref{sss:sched}, and research on the maintenance of the site will be shown in \Cref{sss:maint}. Other research related to offshore projects is shown in \Cref{sss:offsh}. Some other studies to do with uncertain scheduling will be highlighted in \Cref{sss:stoch}.  Afterwards in \Cref{ss:meth} the theory and development of common methods for these problems will be discussed.
 
 \subsection{Research overview} \label{ss:rese}
 
-\subsubsection{Studies on the full installation} \label{sss:sched}
-For the research discussed here, I will discuss some models and methods used, and try and compare these studies. 
+\subsubsection{Scheduling the installation} \label{sss:sched}
+Here I will take an in-depth look into two papers that use comparable methods to look at the issue of producing an efficient schedule, and discuss their strenghts, weaknesses, and difference.
 
 \bigskip
 
-In \cite{barlow2018mixed} a mixed-method approach is used. They identify the strengths and weaknesses of both simulation and optimisation, and aim to use the methods together in a way that exploits the strength of each. First the simulation is used to determine some amount of delay before starting the project, as this can have sizeable impact on the total duration of the project. Then, a mathematical programming model is used to construct a schedule from this starting point. The output of that optimisation model is then used in the simulation to give a view of the overall costs and uncertainty of the project. 
+In \cite{barlow2018mixed} a mixed-method approach is used. They identify the strengths and weaknesses of both simulation and optimisation, and aim to use the methods together in a way that utilises the strength of each. First a simulation is used to determine some amount of delay before starting the project, as this can have sizeable impact on the total duration of the project. Then, a mathematical programming model is used to construct a schedule from this starting point. The output of that optimisation model is then used in the simulation to give a view of the overall costs under uncertain circumstances. 
 
-In the simulation model, a synthetic weather time-series model is used. This weather model is described in full in \cite{dinwoodie2014operational} , and uses a correlated auto-regression model which identifies underlying trends in the data over time and aims to predict future behaviour over time. This seems to be a fitting and sophisticated model. However, in the optimisation model a more simplistic model is used. Tasks are given a minimal duration $d_{i, min}$ and a maximum increase $d_{i, inc}$ of that duration. The realised duration is given by $d_{i,  min} + z_i d_{i, inc}$ for some $0 \leq z_i \leq 1$. The programming model has two levels; the outer model maximises $\sum_i z_i \leq \Gamma$ for some given limit $\Gamma$. The inner model then uses the fixed values $z_i$ to set the start times of each task in accordance with their deadlines and precedence relations. 
+For the simulation a synthetic weather time-series model is used. This weather model is described in full in \cite{dinwoodie2014operational} , and uses a correlated auto-regression model which identifies underlying trends in the data and aims to predict future behaviour over time. This seems to be a fitting and sophisticated model. However, in the optimisation model a more simplistic model is used. Tasks are given a minimal duration $d_{i, min}$ and a maximum increase $d_{i, inc}$ of that duration. The realised duration is given by $d_{i,  min} + z_i d_{i, inc}$ for some $0 \leq z_i \leq 1$. The programming model has two levels; the outer model maximises $\sum_i z_i \leq \Gamma$ for some given limit $\Gamma$. The inner model then uses the fixed values $z_i$ to set the start times of each task in accordance with their deadlines and precedence relations. 
 
-In effect, a $\Gamma$ is chosen to represent a certain percentage of tasks taking their maximum duration. For example, if there are 200 tasks and 10\% of them can take the maximum duration, $\Gamma$ is set to 20, and this can either result in 20 tasks taking their maximum duration with all other tasks being completed in the minimum duration, or every task taking 10\% of its maximum extra time ($d_{i, inc}$). There are two key aspects of weather delay not taking into consideration here. The first is that tasks can often not be performed at all during certain weather conditions. Resources found and discussed in other research (which will be discussed later in this section as well) mention maximum wave heights and wind speeds, which when reached could shut down installation (or at least certain tasks) for hours or maybe even days. These would be identified later when the schedule is tested in simulation (through the synthetic weather series), but it seems valuable if this behaviour was incorporated in the optimisation model as tasks not being able to be performed is fundamentally different behaviour than tasks simply taking longer. The second aspect not used in this model is that delays often occur time-dependent of each other. The model uses multiple vessels; if weather conditions at a certain time cause one vessel to experience delays, chances are the other vessels are experiencing similar delays at that time. Additionally, if a certain task is performed with some delay, the next task that vessel works on probably happens in similar weather conditions and may experience delay again. Therefore it seems a more sophisticated model which incorporates these characteristics of delays could yield results which better correspond to the reality of the projects. 
+%TODO: Improve this paragraph
+In effect, a $\Gamma$ is chosen to represent a certain percentage of tasks taking their maximum duration. For example, if there are 200 tasks and 10\% of them can take the maximum duration, $\Gamma$ is set to 20, and this can either result in 20 tasks taking their maximum duration with all other tasks being completed in the minimum duration, or every task taking 10\% of its maximum extra time ($d_{i, inc}$). 
 
+I have a number of criticisms about this research, which I will now discuss.
+
+The way delay is modelled in the optimisation model considers delays independent, while in practice there are clear patterns. 
+
+
+There are two key aspects of weather delay not taking into consideration here. The first is that tasks can often not be performed at all during certain weather conditions. Resources found and discussed in other research (which will be discussed later in this section as well) mention maximum wave heights and wind speeds, which when reached could shut down installation (or at least certain tasks) for hours or maybe even days. These would be identified later when the schedule is tested in simulation (through the synthetic weather series), but it seems valuable if this behaviour was incorporated in the optimisation model as tasks not being able to be performed is fundamentally different behaviour than tasks simply taking longer. The second aspect not used in this model is that delays often occur time-dependent of each other. The model uses multiple vessels; if weather conditions at a certain time cause one vessel to experience delays, chances are the other vessels are experiencing similar delays at that time. Additionally, if a certain task is performed with some delay, the next task that vessel works on probably happens in similar weather conditions and may experience delay again. Therefore it seems a more sophisticated model which incorporates these characteristics of delays could yield results which better correspond to the reality of the projects. 
+
+%TODO: Improve this paragraph
 An additional criticism to make this research more applicable is the objective of the optimisation; currently the makespan of the longest path of the schedule is minimised, but a company doing the installation will generally be more interested in the total cost of a schedule. This is clearly very related to the makespan, but can differ if certain vessels are used for longer than others, and when parts of the OWF can become active (and generate profit) earlier. Early profits are currently treated as certain milestones to reach, but when using the monetary value of the project in the objective function this can be done more naturally. The common practice of discounting future spending and profit could also be incorporated in this to more accurately represent the interests of the company. It seems like more research into this could therefore be beneficial. 
 
+%TODO: Improve this paragraph
 Finally the strengths of the simulation could be exploited more. In the research presented, a start date is determined at the start and this is then used in the optimisation and for the rest of the research. Optimal schedules starting in each month could be explored more, as well as pausing the operations after they started. For example, if the winter months turn out to be very difficult and slow to work in, the project could be paused over several months, over which no rent for the vessel would have to be payed. This would seem to be particularly effective if a subset of the WTGs could be operational before pausing, as they would generate energy (and revenue) during winter. These seems to be possible areas of research which could be valuable to explore in the future.  
 
 \bigskip
@@ -303,9 +255,8 @@ A more recent overview of the state of robust optimisation is given in \cite{gab
 In \cite{burke2010multi} a robust optimisation approach is applied to a multi-objective airline scheduling problem, the nature of which has certain similarities to offshore scheduling problems. Their approach, which used both iterative improvement and large-scale simulation, was tested in practice and yielded valuable results, signifying that a similar approach might yield good results for my research as well. 
 Another study looking into robust scheduling is \cite{goren2008robustness}. It considers a single machine scheduling problem where the machine randomly breaks down. A single machine scheduling problem is comparable to a project at an OWF with a single vessel. The vessel temporarily having to wait out weather conditions would then relate to the machine breaking down. For this reason the findings in this study may be roughly applicable in offshore scheduling problems. However one key observation is that single machine scheduling problems often behave different from multi-machine scheduling problems, and most projects on OWFs will employ multiple vessels. 
 
-%TODO: gabrel risk 
-%\cite{iancu2013pareto} \cite{dentcheva2010robust}
-As for research about the theory of robust optimisation, \cite{iancu2013pareto} introduces the concept of Pareto efficiency, which has roots in economics and multi-objective optimisation. For a multi-objective problem a solution is Pareto efficient (or Pareto optimal) if any change that gives a better value in one objective function will lead to a worse value in at least one other objective function. For such problems, any desirable solution will be Pareto optimal, and all Pareto optimal solutions together form the Pareto barrier. In \cite{iancu2013pareto} the writers state that within robust optimisation problems there will be a set of solutions which perform optimally within all tested worst-case scenarios, the so called Robustly Optimal (RO) solutions. They then identify some of these RO solutions to be Pareto Robustly Optimal (PRO), which means no other RO solution performs better than the PRO solutions across all possible scenarios. Effectively, they say that RO is not a strong enough requirement for solutions, as in reality the worst-case scenario will not often happen, and a solution being RO says nothing about how that solution will perform in a scenario which is not the worst-case. They then provide a method to generate a PRO solution from any RO solution in a time complexity not greater than the time complexity of the original problem, thereby not significantly increasing the time complexity to finding the desired solution. This paper is a couple of years old now, and seems to have had an impact in the literature.
+%TODO: Final line `impact' is said to be unclear
+As for research about the theory of robust optimisation, \cite{iancu2013pareto} introduces the concept of Pareto efficiency, which comes from economics and multi-objective optimisation. For a multi-objective problem a solution is Pareto efficient (or Pareto optimal) if any change that gives a better value in one objective function will lead to a worse value in at least one other objective function. For such problems, any desirable solution will be Pareto optimal, and all Pareto optimal solutions together form the Pareto barrier. In \cite{iancu2013pareto} the writers state that within robust optimisation problems there will be a set of solutions which perform optimally within all tested worst-case scenarios, the so called Robustly Optimal (RO) solutions. They then identify some of these RO solutions to be Pareto Robustly Optimal (PRO), which means no other RO solution performs better than the PRO solutions across all possible scenarios. Effectively, they say that RO is not a strong enough requirement for solutions, as in reality the worst-case scenario will not often happen, and a solution being RO says nothing about how that solution will perform in a scenario which is not the worst-case. They then provide a method to generate a PRO solution from any RO solution in a time complexity not greater than the time complexity of the original problem, thereby not significantly increasing the time complexity to finding the desired solution. This paper is a couple of years old now, and seems to have had an impact in the literature.
 
 \subsection{Research Methods} \label{ss:meth}
 In the above literature, two main types of methods are used for this problem; optimisation and simulation. Often both are used together, either by tackling one part of the problem with simulation and another with optimisation (as in \cite{barlow2018mixed}), or by creating schedules with an optimisation model, which are then evaluated using simulation (as in \cite{kerkhove2017optimised}). In this section the methods will be discussed in more detail, separate from the research they were used in. Other possible methods for problems of the kind we are looking at will also be discussed. 
@@ -313,6 +264,7 @@ In the above literature, two main types of methods are used for this problem; op
 \bigskip
 
 \subsubsection{Simulation} \label{sss:sim}
+%TODO: 2nd line `accurate' said to be unclear and can a simulation be accurate
 Simulation, especially Discrete Event Simulation, is a very broadly used method in computational analysis \cite{law2000simulation,robinson2010conceptual}. It is often used to evaluate the strength of a proposed layout or schedule under uncertain circumstances. If enough simulations are run, an accurate view of the realistic duration of a schedule can be gained. This does not only mean expected (average) duration, but also for example a confidence interval for the costs of the project or the probability a certain task will be completed before a set time. However, simulation for these offshore projects has two important bottlenecks; the information gained through simulation can only be as precise as the weather model used for it, and running enough simulations to get an accurate result can take considerable time. 
 
 \bigskip
