Reread and updated 3.1 half 1

--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -170,21 +170,16 @@ In \cite{barlow2018mixed} a mixed-method approach is used. They identify the str
 
 For the simulation a synthetic weather time-series model is used. This weather model is described in full in \cite{dinwoodie2014operational} , and uses a correlated auto-regression model which identifies underlying trends in the data and aims to predict future behaviour over time. This seems to be a fitting and sophisticated model. However, in the optimisation model a more simplistic model is used. Tasks are given a minimal duration $d_{i, min}$ and a maximum increase $d_{i, inc}$ of that duration. The realised duration is given by $d_{i,  min} + z_i d_{i, inc}$ for some $0 \leq z_i \leq 1$. The programming model has two levels; the outer model maximises $\sum_i z_i \leq \Gamma$ for some given limit $\Gamma$. The inner model then uses the fixed values $z_i$ to set the start times of each task in accordance with their deadlines and precedence relations. 
 
-%TODO: Improve this paragraph
 In effect, a $\Gamma$ is chosen to represent a certain percentage of tasks taking their maximum duration. For example, if there are 200 tasks and 10\% of them can take the maximum duration, $\Gamma$ is set to 20, and this can either result in 20 tasks taking their maximum duration with all other tasks being completed in the minimum duration, or every task taking 10\% of its maximum extra time ($d_{i, inc}$). 
 
 I have a number of criticisms about this research, which I will now discuss.
 
-The way delay is modelled in the optimisation model considers delays independent, while in practice there are clear patterns. 
+The way delay is modelled in the optimisation model considers delays independent, while in practice there are clear patterns. Often multiple vessels are used, meaning multiple tasks are scheduled for the same time. If one of the tasks is delayed due to the weather, any other tasks scheduled for that time will have to be done under the same weather conditions and are therefore more likely to be delayed. The same holds for two tasks done concecutively by the same vessel, as the weather conditions will be similar for these tasks. 
+Another criticism of the way delays are modelled tasks have a maximum amount of time they could be delayed, but other papers in this field (including the one discussed in the latter half of this section) mention than many tasks cannot be performed at all under certain weather conditions. This is structurally different behaviour from a task simply taking longer, as it may delay any of that type of task for hours or even days. This behaviour is still included in the simulation, so it is tested for when evalutating the quality of a schedule. However it seems the schedules could be improved if this behaviour was considered in the optimisation model as well. 
 
+An additional criticism to make this research more applicable is the objective function used in optimisation. The makespan of the longest path of the schedule is minimised, but a company doing the installation will often be more interested in the total cost of a schedule. This is clearly very related to the makespan, but can differ if certain vessels are used for longer than others, and when parts of the OWF can become active (and generate profit) earlier. Early completion of sections of the windfarm are currently treated as certain milestones to reach, but when using the monetary value of the project in the objective function the actual financial benefits of early completion take effect. The common practice of discounting the cost and value future spending and profit could also be incorporated in this to more accurately represent the interests of the company. It seems like more research into this could therefore be beneficial. 
 
-There are two key aspects of weather delay not taking into consideration here. The first is that tasks can often not be performed at all during certain weather conditions. Resources found and discussed in other research (which will be discussed later in this section as well) mention maximum wave heights and wind speeds, which when reached could shut down installation (or at least certain tasks) for hours or maybe even days. These would be identified later when the schedule is tested in simulation (through the synthetic weather series), but it seems valuable if this behaviour was incorporated in the optimisation model as tasks not being able to be performed is fundamentally different behaviour than tasks simply taking longer. The second aspect not used in this model is that delays often occur time-dependent of each other. The model uses multiple vessels; if weather conditions at a certain time cause one vessel to experience delays, chances are the other vessels are experiencing similar delays at that time. Additionally, if a certain task is performed with some delay, the next task that vessel works on probably happens in similar weather conditions and may experience delay again. Therefore it seems a more sophisticated model which incorporates these characteristics of delays could yield results which better correspond to the reality of the projects. 
-
-%TODO: Improve this paragraph
-An additional criticism to make this research more applicable is the objective of the optimisation; currently the makespan of the longest path of the schedule is minimised, but a company doing the installation will generally be more interested in the total cost of a schedule. This is clearly very related to the makespan, but can differ if certain vessels are used for longer than others, and when parts of the OWF can become active (and generate profit) earlier. Early profits are currently treated as certain milestones to reach, but when using the monetary value of the project in the objective function this can be done more naturally. The common practice of discounting future spending and profit could also be incorporated in this to more accurately represent the interests of the company. It seems like more research into this could therefore be beneficial. 
-
-%TODO: Improve this paragraph
-Finally the strengths of the simulation could be exploited more. In the research presented, a start date is determined at the start and this is then used in the optimisation and for the rest of the research. Optimal schedules starting in each month could be explored more, as well as pausing the operations after they started. For example, if the winter months turn out to be very difficult and slow to work in, the project could be paused over several months, over which no rent for the vessel would have to be payed. This would seem to be particularly effective if a subset of the WTGs could be operational before pausing, as they would generate energy (and revenue) during winter. These seems to be possible areas of research which could be valuable to explore in the future.  
+Finally the strengths of the simulation could be utilized more. In the research presented, a start date is determined at the start and this is then used in the optimisation and for the rest of the research. However in determining a start date a very rudimentary schedule is used. Optimal schedules starting in each month could be explored more, as well as pausing the operations after they started. For example, if the winter months turn out to be very difficult and slow to work in, the project could be paused over several months, over which no rent for the vessel would have to be payed. This would seem to be particularly effective if a subset of the WTGs could be operational before pausing, as they would generate energy (and revenue) during winter. These periods of time are called non-operational periods, and are sometimes used in large projects such as these.  
 
 \bigskip
 
