Updated 3.1 2nd half

--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -183,16 +183,28 @@ Finally the strengths of the simulation could be utilized more. In the research 
 
 \bigskip
 
-A different model is designed in \cite{kerkhove2017optimised}. It uses similar methods as used in \cite{barlow2018mixed}, namely a mixed-method of optimisation and simulation, but in a significantly different way. The research incorporates certain industry restrictions to do with vessel renting; it keeps track of when vessels are commissioned and decommissioned, incorporates a price for both, and has minimal renting and downtime periods. These logically make sense, as the vessels likely have costs to travel between the storage and used port, and the rental company will usually not be able to find other uses for a vessel if it has a sort down time. 
+A different model is designed in \cite{kerkhove2017optimised}. It uses similar methods as used in \cite{barlow2018mixed}, namely a mixed-method of optimisation and simulation, but in a significantly different way. The research incorporates certain industry restrictions to do with vessel renting; it keeps track of which dates vessels are commissioned and decommissioned, incorporates a price for both, and has restrictions on minimal renting and downtime periods. These logically make sense, as the vessels likely have costs to travel between the storage and used port, and the rental company will usually not be able to find other uses for a vessel if it has a sort down time. 
 
-Related to this, the variables being decided on are the gate times of the tasks, instead of the start times as previously. The gate time refers to the time from which resources for a certain task should be made available. These times should be determined in advance, as there are generally long lead times associated with renting the vessels (hence they do not lend themselves much for dynamic scheduling). This allows for the optimisation to directly influence when the money is spent, which is a major focus of this research. The objective function is also different to accommodate this, it maximises net present value of the complete project. This takes into account discount rates both on expenses and project value, which are emphasised in the literature. These rates are higher than traditionally used, as a main reason to include discount rates is the inherent uncertainty of the future, and projects of this nature have an even higher degree of uncertainty.
+Related to this, the variables being decided on are the gate times of the tasks, instead of the start times as previously. The gate time refers to the time from which resources for a certain task should be made available. These times should be determined in advance, as there are generally long lead times associated with renting the vessels (hence they do not lend themselves much for dynamic scheduling). This allows for the optimisation to directly influence when the money is spent, which is a major focus of this research. The objective function is also different to accommodate this, it maximises net present value of the complete project. This takes into account discount rates both on expenses and project value, which are emphasised in the literature. These discount rates are higher than commonly used in research such as this, with the rationale that the main reason to include discount rates is the inherent uncertainty of the future, and projects of this nature have an exceptionally high degree of uncertainty.
 
+Before determining the gate times, the project is divided into time periods. Any size of time period could be used, but in this particular research they choose to use months. Then for each month and each type of task a decision is made whether that type of task can be performed in that month. Each of these decisions is called a chromosome, and a collection of them (for each combination of months and tasks) is called a gene. From the gene a set of gate times is generated through a simple algorithm, and this schedule of gate times is tested in simulation. From there, the gene is modified and tested again, until some end condition is reached. 
+
+Three different methods are compared for this process. Two of them are forms of local search; a simulated annealing algorithm is used to find optimal genes. The difference is the type of gene that is used; one distinguises between different years, the other does not. That is to say, one treats July in year 1 and July in year 2 as different months with different restrictions on tasks while the other does not. The other method is a heuristic instead of local search. Each task is set to have equal weather requirements, meanting that a month either allows for all tasks, or allows for none of them. The other big simplification made in the heuristic is that only a single non-operational period is chosen, which repeats every year. These two strong restrictions mean there are only two decisions to be made; the month in which the non-operational period starts, and the month in which it ends. This reduces the solution space to $12^2 = 144$ different possible genes, all of which is tested and the optimal one is selected. In the experiments performed, this dedicated heuristic search outperformed both methods of local search . 
+
+As with the previous paper, I will now discuss my criticisms of this research. 
+
+%TODO: update 1, 3 and 4 to be placed here, include the final line from 2
+
+%TODO: 1, Criticism like this should maybe be somewhere else
 This leads me to a major limitation of this research. While the monetary value of the project is presented as the main focus, there is no mention of any positive cashflow starting when the project is partly done, nor are there any deadlines for milestones mentioned (such as when the first 10\% or 50\% of the WTGs are operational). Therefore the only positive value considered in the objective is the fixed value of the project upon completion, subject to discount rates. For research so focused on the financial perspective, not incorporating the possibility of early positive cashflows seems like a big gap, and a possible improvement for future research.
 
-The actual methods used in the research are simulation and optimisation (primarily through local search). For the local search, two types of genes are used to represent restrictions of time periods in which certain activity types can be performed. For example, a gene could restrict all activities between December and February, and only allow for certain activities (less susceptible to weather) between September and November. The difference between the two gene types is that one type distinguishes between the years and the other does not (the former might have different weather restrictions for the first July and the second July of the project, while the latter sees them as the same). A simulated annealing algorithm is used to optimise the values of the genes, which are then converted into gate times (through a fairly straightforward algorithm) and tested in a simulation where the net present value of the project is calculated over several runs with different weather series. As an alternative to the local search, a heuristic is used where all activities are seen as the same type and a set of consecutive months to totally halt all execution are identified. Only two values need to be determined; the start and the end of the `break'. This reduces the solution space to a set with a size that is quadratic in the number of discreet periods examined, usually months. Hence the solution space does not exceed $12^2 = 144$ possible combinations, which are all tested in simulation. In the case study for which experiments were run, this dedicated search outperformed both variations of local search. A way to possibly improve this optimisation is to first use the dedicated search to identify regions of the solution space which yield good results, and then use the best results of this search as starting solutions for the local search (where activity types are taken into consideration again). 
+%TODO: 2, Very confusing
+The actual methods used in the research are simulation and optimisation (primarily through local search). For the local search, two types of `genes' are used to represent restrictions of time periods in which certain activity types can be performed. For example, a gene could restrict all activities between December and February, and only allow for certain activities (less susceptible to weather) between September and November. The difference between the two gene types is that one type distinguishes between the years and the other does not (the former might have different weather restrictions for the first July and the second July of the project, while the latter sees them as the same). A simulated annealing algorithm is used to optimise the values of the genes, which are then converted into gate times (through a fairly straightforward algorithm) and tested in a simulation where the net present value of the project is calculated over several runs with different weather series. As an alternative to the local search, a heuristic is used where all activities are seen as the same type and a set of consecutive months to totally halt all execution are identified. Only two values need to be determined; the start and the end of the `break'. This reduces the solution space to a set with a size that is quadratic in the number of discreet periods examined, usually months. Hence the solution space does not exceed $12^2 = 144$ possible combinations, which are all tested in simulation. In the case study for which experiments were run, this dedicated search outperformed both variations of local search. A way to possibly improve this optimisation is to first use the dedicated search to identify regions of the solution space which yield good results, and then use the best results of this search as starting solutions for the local search (where activity types are taken into consideration again). 
 
+%TODO: 3, Update
 Another limitation of this paper are the genes, which are fairly high level. They determine which (category of) tasks can be performed in which month, but determining the schedule on a more detailed timescale can likely lead to much better results. A conversion algorithm is used to generate gate times for each task based on any given chromosome, but it is very simplistic. Every task is placed immediately after all preceding tasks should be completed if there are no weather delays. This is then tested with a single simulation, and if any task executions violate the given chromosome the gate time of that task is shifted forward to the next eligible period. This seems like a very simplistic method to use (as the genes operate on a much larger timescale than the gate times) and leads me to think improvement might be very beneficial.
 
+%TODO: 4
 The final thing to note about this research is the advanced weather simulation model used for the simulation. It uses a combination of transition probability matrices and a Weibull distribution to generate wind speeds and wave heights that are both sufficiently correlated to each other and themselves. The data this is based on was divided by month of the year, so the model takes time of year into account. Given the degree to which this type of project depends on the weather conditions, a realistic and sophisticated model like this is beneficial for the applicability of the model. 
 
 \subsubsection{Maintenance of the site} \label{sss:maint}
