--- a/Annual Review 2019 Report/OneYearReport 0.4.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.4.tex
@@ -230,9 +230,9 @@ While there is not much research relating specifically to decommission projects,
 
 A group of researchers at my department, whose research \cite{barlow2018mixed} I have already described in \Cref{sss:sched}, have developed a simulation tool with which various logistical decisions for the installation of an OWF have been explored. In \cite{barlow2014support} the number of installation vessels and supply barges is experimented with, as well as their relative release dates. These simulations consider only the installation of OSPs and not WTGs. There are several measures considered for the quality of a setup such as the total cost of the project and the completion dates of the first and last OSPs, as well as the uncertainty of those measures (shown through the median and 90\% confidence interval for these measures, resulting from 100 simulations). 
 
-In \cite{barlow2014assessment} the same tool is used to compare several types of installation vessels. Simulations are run with vessels varying in four measures; number of WTGs it is able to carry at once, transition speed, maximum wave height for transitioning and maximum wave height during jacking operations. The values tested range from current vessels to expected vessels available in the near future. The transitioning speed is the only measure which seems to yield continuing improvement; the other three measures have clear diminishing returns and improvement beyond vessels currently available is unlikely to be worth it (given that newer vessels will have a higher cost). A criticism of this research is that all measures are tested in isolation, while three of the four measures are directly related the number or length of transits between the port and the OWF site. It is clear that the average transitioning speed matters less when the capacity is high enough to limit the number of transitions. However, the simulation tool used for this is capable of simulating those vessels, so if used to support decisions in an actual installation project the potential vessels used can be compared. 
+In \cite{barlow2014assessment} the same tool is used to compare several types of installation vessels. Simulations are run with vessels varying in four measures; number of WTGs it is able to carry at once, transition speed, maximum wave height for transitioning and maximum wave height during jacking operations. The values tested range from those corresponding to current vessels to those corresponding to expected vessels available in the near future. The transitioning speed is the only measure which seems to yield continuing improvement; the other three measures have clear diminishing returns and improvement beyond vessels currently available is unlikely to be worth it (given that newer vessels will have a higher cost). A criticism I have of this research is that all measures are tested in isolation, while three of the four measures are directly related the number or length of transits between the port and the OWF site. It is plain to see that the average transitioning speed matters less when the capacity is high enough to limit the number of transitions. This is not mentioned in the paper.
 
-In \cite{barlow2017using}, the final paper (so far) on this tool, they go a bit more in depth on the tool and simulation as a method for supporting decisions in these projects. They talk about how the model was constructed and how after each round of improvements the model was validated with industry partners to ensure its accuracy. Some experiments are also discussed, the first being a simple simulation of the installation of a fictional OWF over 1000 weather series. The costs and duration of each segment of operations are analysed, and it is shown to be desirable to reduce any uncertainty as distribution of costs has a long tail. The standard deviation is \pounds 11.80M (approximately 5\% of the \pounds 233.89M median cost) so reducing uncertainty could lead to saving significant amounts of money. Then experiments with different number of supply barges are performed for the WTG jacket phase of the installation. A scenario is set up where these operations start a full year after the preceding phase of laying the foundations to ensure no delay is caused by that. Two sets of experiments are done, one with a single installation vessel and one with two installations vessels. For both scenarios similar patterns are found in the result; for the costs, there is an optimal minimum and increasing the number of supply barges from there slowly increases cost. The duration of the installation tends to only decrease very slowly from that optimal minimum as well. The statistical significance of their results are also tested, and some differences are found not to be statistically relevant. Finally, the impact of the relative starting dates of piling the foundations and starting jacket operations are explored. The start of laying the foundations is fixed at April 1st to optimally make use of the summer weather conditions. If the jacket operations would start at the same moment, there would be a lot of waiting and delays since the foundations for a specific WT need to be completed before the jacking operations can begin. This increases costs, so delaying the start of these latter operations is beneficial. A good amount of delay found is about 90 days, as waiting longer means more severe winter weather conditions. However, if it is possible to wait out the winter and delay operations about 420 days the total cost can be minimised as waiting this long means there are no delays due to waiting for the foundations, and making optimal use of summer weather conditions. The downside of this is a significant increase in makespan of the entire project. The OWF developer will have to decide between these options. For a different OWF the actual values will obviously differ, but similar patterns could be found. All in all, this tool is shown to be powerful and useful for logistical decisions related to the installation projects. 
+In \cite{barlow2017using}, the final paper (so far) on this tool, the researchers go a bit more in depth on the tool and simulation as a method for supporting decisions in these projects. They talk about how the model was constructed and how after each round of improvements the model was validated with industry partners to ensure it accurately models reality. Some experiments are also discussed, the first being a simple simulation of the installation of a fictional OWF over 1000 weather series. The costs and duration of each segment of operations are analysed, and it is shown to be desirable to reduce any uncertainty as distribution of costs has a long tail. The standard deviation is \pounds 11.80M (approximately 5\% of the \pounds 233.89M median cost) so reducing uncertainty could potentially lead to saving significant amounts of money. Then experiments with different number of supply barges are performed for the WTG jacket phase of the installation. A scenario is set up where these operations start a full year after the preceding phase of laying the foundations to ensure no delay is caused by that. Two sets of experiments are done, one with a single installation vessel and one with two installations vessels. For both scenarios similar patterns are found in the result; for the costs, there is an optimal minimum and increasing the number of supply barges from there slowly increases cost. The duration of the installation tends to only decrease very slowly from that optimal minimum as well. The statistical significance of their results are also tested, and some differences are found not to be statistically relevant. Finally, the impact of the relative starting dates of piling the foundations and starting jacket operations are explored. The start of laying the foundations is fixed at April 1st to optimally make use of the summer weather conditions. If the jacket operations would start at the same moment, there would be a lot of waiting and delays since the foundations for a specific WTG need to be completed before the jacking operations can begin. This increases costs, so delaying the start of these latter operations is beneficial. A good amount of delay found is about 90 days, as waiting longer means more severe winter weather conditions. However, if it is possible to wait out the winter and delay operations about 420 days the total cost can be minimised as waiting this long means there are no delays due to waiting for the foundations, and making optimal use of summer weather conditions. The downside of this is a significant increase in makespan of the entire project. The OWF developer will have to decide between these options. For a different OWF the actual values will obviously differ, but similar patterns could be found. All in all, this tool is shown to be powerful and useful for logistical decisions related to the installation projects. 
 
 \bigskip
 
